Responsive Password Validator Styles

--- a/src/stylesheets/jquery-password-validator.scss
+++ b/src/stylesheets/jquery-password-validator.scss
@@ -33,14 +33,14 @@ $validationInvalidColor:    #ED5E5E;
   position: relative;
 }
 
-.jq-password-validation__input-wrapper--active {
-  &::before {
+@media screen and (min-width: 650px) {
+  .jq-password-validation__input-wrapper--active::before {
     @include triangle($validationBackgroundColor);
-    z-index: 101;
+    z-index: 20;
   }
 
-  // Mimics stroke on <::before> triangle
-  &::after {
+// Mimics stroke on <::before> triangle
+  .jq-password-validation__input-wrapper--active::after {
     @include triangle($validationBorderColor, true);
   }
 }
@@ -50,13 +50,26 @@ $validationInvalidColor:    #ED5E5E;
   border-radius: 4px;
   border: 1px solid $validationBorderColor;
   box-shadow: 0 0 12px -3px rgba(0, 0, 0, 0.2);
-  left: 100%;
-  margin-left: $validationOffsetX;
-  padding: $validationPadding;
+  box-sizing: border-box;
+  font-size: 12px;
+  left: 0;
+  padding: 10px;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 300px;
+  text-align: left;
+  top: 0;
+  width: 200px;
+  z-index: 999;
+  transform: translateY(30%) translateX(-15%);
+  -ms-transform: translateY(30%) translateX(-15%);
+  -webkit-transform: translateY(30%) translateX(-15%);
+
+  @media screen and (min-width: 650px) {
+    padding: $validationPadding;
+    z-index: 15;
+    transform: translateY(-40%) translateX(73%);
+    -ms-transform: translateY(-40%) translateX(73%);
+    -webkit-transform: translateY(-40%) translateX(73%);
+  }
 }
 
 .jq-password-validation__heading {
